# Intrinsic_Resonance_Holography-

./: .dockerignore  .gcloudignore  .gitignore  05_full_stack_execution.ipynb  05_full_stack_execution.ipynb.bak  05_full_stack_execution_corrected.ipynb  AUDIT_SUMMARY_FOR_USER.md  CLOUD_RUN_DEPLOYMENT.md  CLOUD_RUN_QUICKREF.md  COMPLIANCE_USER_GUIDE.md  CONSOLIDATION_SUMMARY.md  CONTINUATION_INSTRUCTIONS.md  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  Dockerfile.cloudrun  FIGURE_SPECIFICATIONS.md  FINAL_IMPLEMENTATION_SUMMARY.md  FINAL_SESSION_SUMMARY.md  IMPLEMENTATION_FILE_TREE.txt  IMPLEMENTATION_STATUS.md  IRH21.md  Intrinsic-Resonance-Holography-21.4.tex  Intrinsic_Resonance_Holography-v21.1-Part1.md  Intrinsic_Resonance_Holography-v21.1-Part2.md  Intrinsic_Resonance_Holography-v21.1.md  LATEX_COMPILATION_GUIDE.md  LATEX_CONVERSION_README.md  ML_SURROGATE_IMPLEMENTATION_INSTRUCTIONS.md  QUICKSTART_CLOUD_RUN.md  README.md  THEORETICAL_CORRESPONDENCE.md  WORKFLOW_FIX_SUMMARY.md  apply_notebook_fixes.py  cloudbuild.yaml  compliance_report.json  continuation_guide.md  deploy-to-cloudrun.sh  fix_notebook.py  job-log (1).txt  job-logs (1).txt  (+4 more)
.github/: COMPLIANCE_IMPLEMENTATION_COMPLETE.md  COMPLIANCE_SYSTEM_README.md  COMPREHENSIVE_TECHNICAL_AUDIT.md  PHASE_2_STATUS.md  PHASE_2_USER_SUMMARY.md  THEORETICAL_CORRESPONDENCE_MANDATE.md  copilot-instructions.md  pull_request_template.md
.github/agents/: The_Mathmatician.agent.md  my-agent.agent.md
.github/archive_dec2025/: COMPLIANCE_QUICK_REFERENCE.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_TECHNICAL_AUDIT.md  PHASE_2_STATUS.md  PHASE_2_USER_SUMMARY.md
.github/workflows/: compliance_check.yml  experimental-data-updates.yml  irh_validation.yml  nightly_comprehensive.yml
archive/: copilot21promtMAX.md
configs/: falsification_suite.yaml  high_precision_lattice.yaml  rg_flow_settings.yaml  standard_lattice.yaml
data/baselines/: v21.0_certified_results.json
data/experimental_values/: codata_2026_constants.json  particle_data_group_2024.json  planck_2018_cosmology.json
data/theoretical_predictions/: fixed_point_couplings.json  physical_constants.json  topological_invariants.json
deploy/: README.md
deploy/docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
deploy/kubernetes/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml
desktop/: README.md  build-deb.sh  pyproject.toml
desktop/debian/: control  postinst  rules
desktop/src/irh_desktop/: __init__.py  main.py
desktop/src/irh_desktop/core/: __init__.py  computation_runner.py  engine_manager.py  job_queue.py  result_exporter.py
desktop/src/irh_desktop/plugins/: __init__.py  base.py  examples.py  manager.py
desktop/src/irh_desktop/ui/: main_window.py  setup_wizard.py
desktop/src/irh_desktop/visualization/: __init__.py  plots.py
desktop/tests/: test_phase_4_6.py
docs/: CONTINUATION_GUIDE.md  CONTINUATION_INSTRUCTIONS.md  DEB_PACKAGE_ROADMAP.md  FRAMEWORK_AUDIT_REPORT.md  MATHEMATICIAN_AGENT_GUIDE.md  ML_SURROGATE_SESSION_4_SUMMARY.md  ML_SURROGATE_SESSION_5_SUMMARY.md  NOTEBOOK_05_ANALYSIS.md  NOTEBOOK_05_EXECUTIVE_SUMMARY.md  NOTEBOOK_05_IMPLEMENTATION_PLAN.md  NOTEBOOK_UPDATE_SUMMARY.md  PHASE_4_5_COMPLETION.md  PHASE_4_5_COMPLETION_SUMMARY.md  PHASE_4_5_STATUS.md  ROADMAP.md  TECHNICAL_REFERENCE.md  architectural_overview.md
docs/manuscripts/: Intrinsic_Resonance_Holography_v21.md
installers/: README.md  install.bat  install.py  install.sh  installer_readme.txt  irh_setup.iss
ml_surrogates/training/: __init__.py  data_loader.py  evaluation.py  loss_functions.py  train_surrogate.py
ml_surrogates/utils/: __init__.py  config.py  graph_conversion.py  visualization.py
notebooks/: 00_quickstart.ipynb  01_group_manifold_visualization.ipynb  02_rg_flow_interactive.ipynb  03_observable_extraction.ipynb  03_observable_extraction_demo.ipynb  04_falsification_analysis.ipynb  05b_exascale_ml.ipynb  README.md
scripts/: audit_equation_implementations.py  check_experimental_updates.py  compute_all_observables.py  convert_md_to_latex.py  demo_full_alpha_computation.py  enhanced_latex_converter.py  run_full_validation_suite.py  update_all_notebooks.py  verify_compliance.py  verify_theoretical_annotations.py
src/cgft/: __init__.py  actions.py  fields.py  interactions.py  operators.py
src/ci_cd/: __init__.py  ci_infrastructure.py
src/cosmology/: __init__.py  dark_energy.py
src/documentation/: __init__.py  code_theory_xref.py
src/emergent_spacetime/: __init__.py  einstein_equations.py  lorentzian_signature.py  metric_tensor.py  spectral_dimension.py
src/experimental/: __init__.py  cache_manager.py  codata_api.py  codata_database.py  comparison.py  data_catalog.py  online_updater.py  pdg_api.py  pdg_parser.py  update_manager.py
src/falsifiable_predictions/: __init__.py  gravitational_sidebands.py  lorentz_violation.py  muon_g_minus_2.py
src/logging/: __init__.py  provenance.py  structured_logger.py  transparency_engine.py
src/ml/: parameter_optimizer.py  rg_flow_surrogate.py  uncertainty_quantification.py
src/observables/: __init__.py  alpha_inverse.py  convergence_validation.py  experimental_comparison.py  harmony_optimizer.py  logarithmic_enhancements.py  monte_carlo_integration.py  physical_constants.py  qncd_geometric_factor.py  rg_coefficients.py  universal_exponent.py  vertex_corrections.py
src/output/: __init__.py  output_standardization.py
src/performance/: __init__.py  cache_manager.py  distributed.py  gpu_acceleration.py  memory_optimization.py  mpi_parallel.py  numerical_opts.py  profiling.py
src/primitives/: __init__.py  (+3 more)
tests/: __init__.py  conftest.py
(+103 files in other folders)
