[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irh"
version = "21.1.0"
description = "Intrinsic Resonance Holography: Computational Framework for Quantum-Informational Physics"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Brandon D. McCrary", email = "brandonmccrary.research@gmail.com"}
]
maintainers = [
    {name = "Brandon D. McCrary", email = "brandonmccrary.research@gmail.com"}
]
keywords = [
    "quantum-gravity",
    "quantum-information",
    "renormalization-group",
    "theoretical-physics",
    "computational-physics",
    "emergent-spacetime",
    "standard-model",
    "falsifiable-predictions"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "sympy>=1.12",
    "pyyaml>=6.0",
    "h5py>=3.8.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
]

dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
]

notebooks = [
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.7.0",
]

gpu = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
]

parallel = [
    "mpi4py>=3.1.0",
]

all = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "jupyter>=1.0.0",
    "jupyterlab>=4.0.0",
    "matplotlib>=3.7.0",
]

[project.urls]
Homepage = "https://github.com/brandonmccraryresearch-cloud/Intrinsic_Resonance_Holography"
Documentation = "https://github.com/brandonmccraryresearch-cloud/Intrinsic_Resonance_Holography/tree/main/docs"
Repository = "https://github.com/brandonmccraryresearch-cloud/Intrinsic_Resonance_Holography"
Issues = "https://github.com/brandonmccraryresearch-cloud/Intrinsic_Resonance_Holography/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false

[tool.black]
line-length = 88
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
    ".",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
