[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "irh-desktop"
version = "21.0.0"
description = "Intrinsic Resonance Holography Desktop Application"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Brandon D. McCrary", email = "brandon@irhresearch.org"}
]
maintainers = [
    {name = "Brandon D. McCrary", email = "brandon@irhresearch.org"}
]
keywords = [
    "physics", "quantum gravity", "group field theory", 
    "asymptotic safety", "unified theory", "desktop application"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.4.0",
    "PyQt6-Qt6>=6.4.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-qt>=4.2",
    "pytest-cov>=4.0",
    "black>=23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
irh-desktop = "irh_desktop.main:main"

[project.gui-scripts]
irh-desktop-gui = "irh_desktop.main:main"

[project.urls]
Homepage = "https://github.com/brandonmccraryresearch-cloud/Intrinsic_Resonance_Holography-"
Documentation = "https://github.com/brandonmccraryresearch-cloud/Intrinsic_Resonance_Holography-/blob/main/docs/TECHNICAL_REFERENCE.md"
Repository = "https://github.com/brandonmccraryresearch-cloud/Intrinsic_Resonance_Holography-"
Issues = "https://github.com/brandonmccraryresearch-cloud/Intrinsic_Resonance_Holography-/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"irh_desktop" = ["resources/**/*"]

[tool.black]
line-length = 100
target-version = ['py311', 'py312']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "D", "UP"]
ignore = ["D100", "D104"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
